Whitelisted QB contracts
